--- a/ass5/alert_box.html
+++ b/ass5/alert_box.html
@@ -15,7 +15,10 @@
         <button class="cancel">x</button>
         </div>
     
-    <div class = "content">Lorem ipsum sit amet consectetur adipisicing elit.Pariatur excepturi id soluta id soluta,numquam minima rerum doloremque eveniet aspermatur betatae commodi.Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspermatur cumque!</div>
+    <div class = "content">Lorem ipsum sit amet consectetur adipisicing elit.
+        Pariatur excepturi id soluta id soluta,numquam minima rerum doloremque
+        eveniet aspermatur betatae commodi.Cupiditate recusandae ad repellendus
+        quidem consectetur sequi amet aspermatur cumque!</div>
     <button class = "continue">continue</button>
     <button class = "ruk">cancel</button>
     </div>
